# chroma-engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  memcheck.sh  perf.txt
.github/workflows/: cmake-single-platform.yml  lint.yml  linux.yml
archive/: gr_hub_archive.c  parser_png.c
c_archive/: chroma-engine.h  parse-graphic.c  tcp-server.c
config/: config.toml
data/: test.mpg
perf/: perf.sh
src/: arena.h  chroma-engine.c  chroma-engine.h  chroma-macros.h  chroma-prototypes.h  chroma-typedefs.h  chrome-engine.c  config.h  engine.c  geometry.h  gl_math.h  gl_render.h  gl_renderer.h  glarea-gl.vs.glsl  graphics-hub.c  graphics.h  log.c  log.h  page.c  page.h  parser.c  parser.h  preview.c  render.c  renderer.c  tcp-server.c
src/config/: config_internal.h  config_parse_file.c
src/geometry/: g_annulus.c  g_text.c  geo_annulus.c  geo_circle.c  geo_graph.c  geo_image.c  geo_poly.c  geo_rect.c  geo_text.c  geo_video.c  geometry.c  geometry_internal.h
src/gl_render/: gl_annulus.c  gl_circle.c  gl_graph.c  gl_image.c  gl_math.c  gl_poly.c  gl_rect.c  gl_rectangle.c  gl_render.c  gl_render_internal.h  gl_renderer.c  gl_renderer.h  gl_shaders.c  gl_shape.c  gl_text.c  gl_triangle.c  gl_video.c  glimage-gl.fs.glsl  glimage-gl.vs.glsl  glrect-gl.fs.glsl  glrect-gl.vs.glsl  glrender-gl.vs.glsl  glshape-gl.vs.glsl  gltext-gl.fs.glsl  gltext-gl.vs.glsl
src/graphics/: gr_animation.c  gr_graph.c  gr_hub.c  gr_hub_archive.c  gr_keyframe.c  gr_page.c  graphics_internal.h  hub.archive
src/page/: animation.c  annulus.c  circle.c  graphics-hub.c  page.c  page.h  rect.c  text.c
src/parser/: buffer.c  parser.c  parser.h  parser_http.c  parser_http.h  parser_internal.h  parser_json.c  parser_json.h  parser_png.c  parser_recieve_graphics.c  parser_recieve_hub.c  (+4 more)
