# cmake -S . -B build/

CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
SET(CMAKE_C_COMPILER "gcc")
SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -Wpedantic")

PROJECT(chroma-engine)
SET(CMAKE_EXPORT_COMPILE_COMMANDS 1)

# Link against gtk
FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK REQUIRED gtk+-3.0)
PKG_CHECK_MODULES(OPENGL REQUIRED glew)
INCLUDE_DIRECTORIES(${GTK_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS})

# Add source files
FILE(GLOB SOURCES ${PROJECT_SOURCE_DIR}/src/*.c)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES}) 
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE ${GTK_LIBRARIES} ${OPENGL_LIBRARIES} m)
