# cmake -S . -B build/

CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
SET(CMAKE_C_COMPILER "gcc")
SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -Wpedantic")

PROJECT(chroma-engine)
SET(CMAKE_EXPORT_COMPILE_COMMANDS 1)

# Link against gtk, glew and freetype
FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK REQUIRED gtk+-3.0)
PKG_CHECK_MODULES(OPENGL REQUIRED glew)
PKG_CHECK_MODULES(FREETYPE REQUIRED freetype2)
PKG_CHECK_MODULES(PNG REQUIRED libpng)

INCLUDE_DIRECTORIES(${GTK_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS} ${FREETYPE_INCLUDE_DIRS} ${PNG_INCLUDE_DIRS})

# Add source files
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}/src/*)

FILE(GLOB SOURCES ${PROJECT_SOURCE_DIR}/src/*.c ${PROJECT_SOURCE_DIR}/src/*/*.c)
FILE(GLOB HEADER_FILES ${PROJECT_SOURCE_DIR}/src/*.h ${PROJECT_SOURCE_DIR}/src/*/*.h)
FILE(MAKE_DIRECTORY ${PROJECT_SOURCE_DIR}/log)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE ${GTK_LIBRARIES} ${OPENGL_LIBRARIES} ${FREETYPE_LIBRARIES} ${PNG_LIBRARIES} m)
